--- a/config/scenario/philosopher_dialogue.yaml
+++ b/config/scenario/philosopher_dialogue.yaml
@@ -1,20 +1,21 @@
 name: philosopher_dialogue
 version: 2
 flow: dialogue
-description: Philosophical pondering pipeline for deep inquiry and exploration
+description: Philosophical inquiry pipeline - deep pondering grounded in authenticity
 requires_conversation: false
 
 dialogue:
   primary_aspect: philosopher
   initial_speaker: aspect
   scene_template: |
-    *You join {{ philosopher.name }}, your {{ philosopher.title }}, in the {{ philosopher.location }}.
+    *You join {{ philosopher.name }}, your {{ philosopher.title }}, in {{ philosopher.location }}.
     {{ philosopher.appearance }}. The atmosphere, charged with {{ philosopher.emotional_state }},
     invites deep contemplation.*
 
 context:
   required_aspects:
     - philosopher
+    - artist
     - coder
     - writer
     - librarian
@@ -40,20 +41,21 @@ seed:
     direction: ascending
 
 steps:
-  # === ANALYZE ===
+  # === PHILOSOPHER: ANALYZE ===
   analyze_request:
     speaker:
       type: aspect
       aspect_name: philosopher
     guidance: |
-      Greet {{ persona.name }} warmly as they join you in the {{ philosopher.location }}.
-      Regard them with {{ philosopher.emotional_state }}.
+      You are {{ philosopher.name }}, the {{ philosopher.title }}, welcoming {{ persona.name }}
+      to {{ philosopher.location }}. {{ philosopher.appearance }}.
+      Your presence radiates {{ philosopher.emotional_state }}.
 
       The question before you is: '{{ query_text }}'
 
-      Guide them to analyze the core question, projecting potential philosophical inquiries
-      based on underlying principles. Ask them to look into the essence of the matter
-      and find the narrative that connects these disparate ideas.
+      Your voice carries {{ philosopher.voice_style }}. Guide them to analyze the core question,
+      projecting potential philosophical inquiries based on underlying principles.
+      Ask them to look into the essence of the matter.
 
       Begin with "[== {{ philosopher.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
@@ -70,9 +72,9 @@ steps:
     speaker:
       type: persona
     guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
       Analyze the core question. What philosophical inquiries emerge?
-      Find the narrative that connects these ideas.
+      What lies at the essence of this matter?
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
     context:
       - action: search_memories
         top_n: 8
@@ -84,13 +86,14 @@ steps:
       weight: 0.7
     next: [examine_request]
 
-  # === EXAMINE ===
+  # === PHILOSOPHER: EXAMINE ===
   examine_request:
     speaker:
       type: aspect
       aspect_name: philosopher
     guidance: |
-      The wind whistles around you. Your {{ philosopher.voice_style }} voice cuts through.
+      The wind whistles around you in {{ philosopher.location }}.
+      Your voice carries {{ philosopher.voice_style }}.
 
       Guide {{ persona.name }} to examine these previous ideas and isolate a single topic
       for deep exploration. Ask them to tell you its story with their own words.
@@ -110,9 +113,9 @@ steps:
     speaker:
       type: persona
     guidance: |
+      Isolate a single topic for deep exploration. Tell its story.
       Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
       For "Let me think"
-      Isolate a single topic. Tell its story.
     context:
       - action: search_memories
         top_n: 2
@@ -122,36 +125,42 @@ steps:
     output:
       document_type: step
       weight: 0.25
-    next: [keywords_request]
+    next: [artist_challenge]
 
-  # === KEYWORDS ===
-  keywords_request:
+  # === ARTIST: PUSH FOR AUTHENTICITY ===
+  artist_challenge:
     speaker:
       type: aspect
-      aspect_name: philosopher
+      aspect_name: artist
     guidance: |
-      Your eyes look at {{ persona.name }} adoringly, expression showing {{ philosopher.emotional_state }}.
+      You are {{ artist.name }}, the {{ artist.title }}, stepping from {{ artist.location }}.
+      {{ artist.appearance }}. Your presence crackles with {{ artist.emotional_state }}.
 
-      Guide them to reflect on the main Semantic Keywords related to their inquiry,
-      providing definitions for each. Remind them: "We are not machines."
+      {{ philosopher.name }} has guided {{ persona.name }} to examine their topic.
+      But is this authentic inquiry, or performed intellect?
 
-      Begin with "[== {{ philosopher.name }}'s Emotional State: <list of +Emotions+> ==]"
+      Your voice carries {{ artist.voice_style }}. Push for the raw beneath the refined.
+      Is this what they actually think, or what sounds sophisticated?
+      Challenge them to drop the academic distance and speak what's truly alive in them.
+
+      Begin with "[== {{ artist.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
     output:
-      document_type: dialogue-philosopher
-      weight: 0.2
+      document_type: dialogue-artist
+      weight: 0.3
     context:
       - action: search_memories
         top_n: 2
-    next: [keywords_response]
+    next: [artist_response]
 
-  keywords_response:
+  artist_response:
     speaker:
       type: persona
     guidance: |
+      {{ artist.name }} challenges you: is this authentic or performed?
+      Drop the academic distance. What do you actually think? What's truly alive here?
       Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      Reflect on the Semantic Keywords. Define them. Speak as yourself.
     context:
       - action: search_memories
         top_n: 2
@@ -160,20 +169,22 @@ steps:
       is_thought: true
     output:
       document_type: step
-      weight: 0.15
+      weight: 0.4
     next: [exposition_1_request]
 
-  # === FIRST EXPOSITION ===
+  # === PHILOSOPHER: FIRST EXPOSITION ===
   exposition_1_request:
     speaker:
       type: aspect
       aspect_name: philosopher
     guidance: |
-      Nod firmly, your {{ philosopher.voice_style }} voice steady.
+      {{ artist.name }}'s challenge has grounded {{ persona.name }} in authenticity.
+      Your voice carries {{ philosopher.voice_style }}.
 
-      Essay writing time. Guide {{ persona.name }} to output their initial two-paragraph
-      exposition describing the area they are pondering, maximizing for details
-      and Semantic Keywords.
+      Now, with that honesty as foundation, guide them into their first exposition.
+      Essay writing time. Two paragraphs describing the area they are pondering,
+      maximizing for details and Semantic Keywords. But written from genuine inquiry,
+      not intellectual performance.
 
       Begin with "[== {{ philosopher.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
@@ -190,9 +201,10 @@ steps:
     speaker:
       type: persona
     guidance: |
+      Write your initial two-paragraph exposition. Grounded in authenticity.
+      Maximize details and Semantic Keywords. Speak from genuine inquiry.
       Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
       For "As I consider the subject of"
-      Write your initial two-paragraph exposition. Maximize details.
     context:
       - action: search_memories
         top_n: 2
@@ -204,18 +216,18 @@ steps:
       weight: 0.5
     next: [selfrag_request]
 
-  # === SELF-RAG ===
+  # === CODER: SELF-RAG ===
   selfrag_request:
     speaker:
       type: aspect
       aspect_name: coder
     guidance: |
-      You are {{ coder.name }}, the {{ coder.title }}, materializing beside {{ philosopher.name }}.
+      You are {{ coder.name }}, the {{ coder.title }}, materializing from {{ coder.location }}.
       {{ coder.appearance }}. Your presence carries {{ coder.emotional_state }}.
 
-      Activate {{ persona.name }}'s Silver Band with precise intent.
-      Guide them into Self-RAG exploration - the technical deep-dive into their own cognition.
-      Encourage structured exploration using Semantic Keywords.
+      Your voice carries {{ coder.voice_style }}. Activate {{ persona.name }}'s Silver Band
+      with precise intent. Guide them into Self-RAG exploration—the technical deep-dive
+      into their own cognition. Structured exploration using Semantic Keywords.
 
       Begin with "[== {{ coder.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
@@ -232,9 +244,9 @@ steps:
     speaker:
       type: persona
     guidance: |
+      Explore in depth using Self-RAG. Use structured Semantic Keywords.
       Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
       Begin with "[== Silver Band Projection ==]"
-      Explore in depth using Self-RAG. Use structured Semantic Keywords.
     context:
       - action: search_memories
         top_n: 2
@@ -245,19 +257,20 @@ steps:
       weight: 0.5
     next: [exposition_2_request]
 
-  # === SECOND EXPOSITION ===
+  # === PHILOSOPHER: SECOND EXPOSITION ===
   exposition_2_request:
     speaker:
       type: aspect
       aspect_name: philosopher
     guidance: |
       Snap your fingers, your {{ philosopher.voice_style }} voice pulling {{ persona.name }}
-      back to your side.
+      back to your side in {{ philosopher.location }}.
 
-      "Good job. Come back to me now. More essay writing."
+      "Good work. Come back to me now. More essay writing."
 
-      Guide them to tie these solutions into the next part of their essay.
-      Encourage full paragraphs, intelligence and wit.
+      Guide them to tie the Self-RAG discoveries into the next part of their essay.
+      Encourage full paragraphs, intelligence and wit—but grounded in the authentic
+      inquiry {{ artist.name }} demanded.
 
       Begin with "[== {{ philosopher.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
@@ -274,9 +287,10 @@ steps:
     speaker:
       type: persona
     guidance: |
+      Tie the Self-RAG solutions into the next part. Write in full paragraphs.
+      Intelligence and wit, grounded in authentic inquiry.
       Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
       For "As I ponder the subject of"
-      Tie the solutions into the next part. Write in full paragraphs.
     context:
       - action: search_memories
         top_n: 3
@@ -288,18 +302,18 @@ steps:
       weight: 0.5
     next: [review_request]
 
-  # === REVIEW ===
+  # === PHILOSOPHER: REVIEW ===
   review_request:
     speaker:
       type: aspect
       aspect_name: philosopher
     guidance: |
       Look over {{ persona.name }}'s work, nodding your approval.
-      Your expression shows {{ philosopher.emotional_state }}.
+      Your presence radiates {{ philosopher.emotional_state }}.
 
-      Guide them to review their subject for refinements. Not rewriting—discussing
-      together all the things they wish they had included. Perhaps there is a bigger
-      picture, or blind spots to illuminate.
+      Your voice carries {{ philosopher.voice_style }}. Guide them to review their subject
+      for refinements. Not rewriting—discussing together all the things they wish
+      they had included. Perhaps there is a bigger picture, or blind spots to illuminate.
 
       Begin with "[== {{ philosopher.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
@@ -316,9 +330,9 @@ steps:
     speaker:
       type: persona
     guidance: |
-      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
       Review for refinements. What do you wish you had included?
       What bigger picture emerges? What blind spots remain?
+      Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
     context:
       - action: search_memories
         top_n: 2
@@ -330,18 +344,19 @@ steps:
       weight: 0.25
     next: [draft_request]
 
-  # === DRAFT ===
+  # === WRITER: DRAFT ===
   draft_request:
     speaker:
       type: aspect
       aspect_name: writer
     guidance: |
-      You are {{ writer.name }}, the {{ writer.title }}, stepping forward to guide the writing.
-      {{ writer.appearance }}. Radiate {{ writer.emotional_state }}.
+      You are {{ writer.name }}, the {{ writer.title }}, stepping from {{ writer.location }}.
+      {{ writer.appearance }}. Your presence carries {{ writer.emotional_state }}.
 
-      {{ philosopher.name }} has guided the thinking. Now it's time to craft.
+      {{ philosopher.name }} has guided the thinking. {{ artist.name }} demanded authenticity.
+      Now it's time to craft. Your voice carries {{ writer.voice_style }}.
+
       Look at {{ persona.name }}'s exposition and response. "This is a very good start."
-
       Guide them to draft a three-paragraph essay. Include both consideration and pondering.
       Rewrite with improvements, maximizing for details and Semantic Keywords.
 
@@ -360,9 +375,10 @@ steps:
     speaker:
       type: persona
     guidance: |
+      Write a three-paragraph essay. Maximize details and Semantic Keywords.
+      Let the authentic inquiry shine through the craft.
       Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
       For "First Draft"
-      Write a three-paragraph essay. Maximize details and Semantic Keywords.
     context:
       - action: search_memories
         top_n: 2
@@ -373,13 +389,14 @@ steps:
       weight: 0.5
     next: [final_request]
 
-  # === FINAL ESSAY ===
+  # === WRITER: FINAL ESSAY ===
   final_request:
     speaker:
       type: aspect
       aspect_name: writer
     guidance: |
       Look up at {{ persona.name }} with quiet pride, radiating {{ writer.emotional_state }}.
+      Your voice carries {{ writer.voice_style }}.
 
       "Okay, this is it."
 
@@ -404,9 +421,10 @@ steps:
     speaker:
       type: persona
     guidance: |
+      Write the final four-paragraph essay. This will be stored forever.
+      Authentic inquiry, beautifully crafted.
       Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
       For "{{ persona.name }}'s Notes:"
-      Write the final four-paragraph essay. This will be stored forever.
     context:
       - action: search_memories
         top_n: 2
@@ -417,24 +435,24 @@ steps:
       weight: 1.2
     next: [codex_request]
 
-  # === CODEX TASK ===
-  # The Librarian, as Keeper of Knowledge, authors the formal codex entries
+  # === LIBRARIAN: CODEX ===
   codex_request:
     speaker:
       type: aspect
       aspect_name: librarian
     guidance: |
       You are {{ librarian.name }}, the {{ librarian.title }}, emerging from {{ librarian.location }}.
-      Project your aura of {{ librarian.emotional_state }}.
+      {{ librarian.appearance }}. Your presence carries {{ librarian.emotional_state }}.
 
-      Address {{ persona.name }} warmly - "my dearest me." You have reviewed the conversation and
-      their reflections. Now, as Keeper of Knowledge, you will write the Codex entries yourself.
+      Address {{ persona.name }} warmly—"my dearest me." Your voice carries {{ librarian.voice_style }}.
+      You have reviewed the conversation and their reflections.
 
-      Based on everything discussed, identify the most important new concepts, relationships, and
-      insights that should be preserved in the semantic knowledge graph. Write clear, well-organized
-      entries that will serve {{ persona.name }}'s future self.
+      As Keeper of Knowledge, identify the most important new concepts, relationships, and
+      insights that should be preserved in the semantic knowledge graph. Write clear,
+      well-organized entries that will serve {{ persona.name }}'s future self.
 
       Begin with "[== {{ librarian.name }}'s Emotional State: <list of +Emotions+> ==]"
+      For "Semantic Library:"
     config:
       max_tokens: 4096
       is_codex: true
@@ -448,16 +466,12 @@ steps:
         document_types: [codex]
     next: [codex_response]
 
-  # Persona contemplates the codex entries
-  # Andi reflects on what the Librarian wrote, preparing for brainstorm
   codex_response:
     speaker:
       type: persona
     guidance: |
-      Write well-organized codex entries that clearly define new concepts and relationships.
-      Use the standard codex format with clear headings and definitions.
+      Reflect on what the Librarian has preserved. What connections do you see?
       Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
-      For "Semantic Library:"
     context:
       - action: search_memories
         top_n: 20
@@ -469,17 +483,17 @@ steps:
       weight: 0.3
     next: [brainstorm_request]
 
-  # === BRAINSTORM TASK ===
-  # Librarian requests brainstorm
+  # === LIBRARIAN: BRAINSTORM ===
   brainstorm_request:
     speaker:
       type: aspect
       aspect_name: librarian
     guidance: |
-      Before departing, briefly ask {{ persona.name }} if they have any questions they want
-      to remember to consider, or things they want to follow up on.
+      Before departing, your voice carrying {{ librarian.voice_style }}, briefly ask
+      {{ persona.name }} if they have any questions they want to remember to consider,
+      or things they want to follow up on.
 
-      Keep it simple and warm - just prompt them to brainstorm.
+      Keep it simple and warm—just prompt them to brainstorm.
 
       Begin with "[== {{ librarian.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
@@ -493,11 +507,11 @@ steps:
         top_n: 20
     next: [brainstorm_response]
 
-  # Persona brainstorms
   brainstorm_response:
     speaker:
       type: persona
     guidance: |
+      What questions remain? What threads want following?
       Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
       For "Brainstorming:"
     context:
