--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = {text = "CC-BY-NC-SA-4.0"}
 readme = "README.md"
 requires-python = ">=3.10, <4.0"
 dependencies = [
+    "aim-mud-types",
     "chardet",
     "bullmq",
     "redis",
@@ -67,4 +68,13 @@ filterwarnings = [
 [tool.uv.workspace]
 members = [
     "cliui",
+    "packages/aim-mud-types",
+]
+
+[tool.uv.sources]
+aim-mud-types = { workspace = true }
+
+[dependency-groups]
+test = [
+    "pytest-asyncio>=1.3.0",
 ]
